# BRD

./: README.md  pyproject.toml  sample_request.json
src/brd_agent/: __init__.py  api.py  builder.py
src/brd_agent/src/brd_agent/: cli.py  research.py
src/brd_agent/src/brd_agent/src/brd_agent/: models.py
src/brd_agent/src/brd_agent/src/brd_agent/templates/: brd.md.j2
src/brd_agent/src/brd_agent/src/brd_agent/templates/tests/: test_api.py
src/brd_agent/src/brd_agent/src/brd_agent/templates/tests/tests/: test_builder.py
